objects/Tag__c/Tag__c.object-meta.xml
<CustomObject>
    <description>This is Tag object. It stores the tags of Job record.</description>
    <label>Job Tags</label>
    <nameField>
        <label>Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>