objects/Tag__c/fields/Dummy_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_1__c</fullName>
    <description>This is Dummy field, can be use in subsriber org according to thier need.</description>
    <label>Dummy Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Visual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>