objects/Tag__c/fields/Dummy_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_2__c</fullName>
    <description>This is Dummy field, can be use in subsriber org according to thier need.</description>
    <label>Dummy Text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>