objects/Tag__c/fields/Tag_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Air_Date__c</fullName>
    <description>This is Tag Air Date field.</description>
    <label>Air Date</label>
    <type>Date</type>
</CustomField>