objects/Tag__c/fields/Tag_Air_Time__c.field-meta.xml
<CustomField>
    <fullName>Tag_Air_Time__c</fullName>
    <label>Air Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>