objects/Tag__c/fields/Tag_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Due_Date__c</fullName>
    <label>Promo Due Date</label>
    <type>Date</type>
</CustomField>