objects/Tag__c/fields/Tag_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_End_Date__c</fullName>
    <description>This is Tag End Date.</description>
    <label>Promo End Date</label>
    <type>Date</type>
</CustomField>