objects/Tag__c/fields/Tag_Lengths__c.field-meta.xml
<CustomField>
    <fullName>Tag_Lengths__c</fullName>
    <description>This is Tag Lengths field.</description>
    <label>Lengths</label>
    <length>25</length>
    <type>Text</type>
</CustomField>