objects/Tag__c/fields/Tag_Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Tag_Program_Title__c</fullName>
    <description>This is Program Title field.</description>
    <label>Tag Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>