objects/Tag__c/fields/Tag_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Start_Date__c</fullName>
    <description>This is Tag Start Date.</description>
    <label>Show Air Date</label>
    <type>Date</type>
</CustomField>