objects/Tag__c/validationRules/Tag_Start_Date_Less_Than_Tag_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Tag_Start_Date_Less_Than_Tag_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Tag_Start_Date__c  &gt;  Tag_End_Date__c</errorConditionFormula>
    <errorDisplayField>Tag_End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>